hphp/hack/test/typecheck/vec/vec_key_must_be_int.php.exp
File "vec_key_must_be_int.php", line 4, characters 10-18:
Invalid index type for this vec (Typing[4324])
File "vec_key_must_be_int.php", line 4, characters 15-17:
Expected int because only int can be used to index into a Vector or vec.
File "vec_key_must_be_int.php", line 4, characters 15-17:
But got string
