hphp/hack/test/typecheck/vec/vec_key_must_be_int.php
<?hh

function foo(vec<string> $arg): string {
  return $arg["x"];
}
